<resources>
    <string name="app_name">QuestionsChat</string>
    <string name="title_activity_verification">VerificationActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="frame">Frame</string>
    <string name="livechat">LiveChat</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="one_time_password">One Time Password</string>
    <string name="we_will_send_you_an">We will send you an</string>
    <string name="on_this_mobile_number">On this mobile Number</string>
    <string name="type_your_phone_number">Type your Phone Number</string>
    <string name="continue_btn">Continue</string>
    <string name="image_of_phone_in_hand">Image of phone in hand</string>
    <string name="verify_1_9734620735">Verify +1 9734620735</string>
    <string name="enter_the_otp_code_to_verify_your_phone_number">Enter the OTP code to Verify Your Phone Number</string>
    <string name="profile_information">Profile Information</string>
    <string name="please_set_your_name_and_an_optional_profile_image">Please set your name and an optional Profile Image</string>
    <string name="type_your_name">Type your Name</string>
    <string name="setup_profile">Setup Profile</string>
    <string name="main_background">main background</string>
    <string name="answer_amp_question"><![CDATA[Answer & Question]]></string>
    <string name="work_in_android_development_and_application_ui_design">Work in Android Development and Application UI Design</string>
    <string name="profile_name">Profile Name</string>
    <string name="ask_any_question_for_expert_and_get_the_better_solution">Ask any question for Expert and get the better Solution</string>
    <string name="back">Back</string>
    <string name="online">Online</string>
    <string name="ask_a_question">Ask a question…</string>
    <string name="camera">Camera</string>
    <string name="attachment">Attachment</string>
    <string name="send_message">Send message</string>
    <string name="image_received">Image received</string>
</resources>