<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activities.OTPActivity">

    <ImageView
        android:id="@+id/phoneImageView"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="64dp"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/phone"
        android:contentDescription="@string/image_of_phone_in_hand" />

    <TextView
        android:id="@+id/numberVerifyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/verify_1_9734620735"
        android:textSize="25sp"
        android:textStyle="bold|normal"
        android:textColor="@color/blue"
        app:layout_constraintEnd_toEndOf="@+id/phoneImageView"
        app:layout_constraintStart_toStartOf="@+id/phoneImageView"
        app:layout_constraintTop_toBottomOf="@+id/phoneImageView"/>

    <TextView
        android:id="@+id/verifyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_the_otp_code_to_verify_your_phone_number"
        android:textSize="13sp"
        android:textColor="@color/grey"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="@+id/numberVerifyTextView"
        app:layout_constraintStart_toStartOf="@+id/numberVerifyTextView"
        app:layout_constraintTop_toBottomOf="@+id/numberVerifyTextView"/>

    <androidx.cardview.widget.CardView
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="8dp"
        app:cardElevation="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verifyTextView">

        <LinearLayout
            android:orientation="vertical"
            android:gravity="center"
            android:padding="15dp"
            android:background="@color/white"
            android:layout_margin="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            
            <com.mukesh.OtpView
                android:id="@+id/otpView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="number"
                android:itemBackground="@color/white"
                android:focusableInTouchMode="true"
                app:OtpItemCount="6"
                app:OtpLineColor="@color/blue"
                app:OtpViewType="line"
                android:textSize="26sp"
                />

            <Button
                android:id="@+id/continueVerifyButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0.9"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/blue"
                android:text="@string/continue_btn"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold|normal" />
            
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>