<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activities.ChatActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/backImageView"
                android:layout_weight="1"
                android:layout_width="0dp"
                app:tint="@color/white"
                android:src="@drawable/ic_backspace"
                android:layout_height="60dp"
                android:contentDescription="@string/back" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profileImageView"
                android:layout_marginStart="8dp"
                android:src="@drawable/avatar"
                android:layout_gravity="center"
                android:layout_width="42dp"
                android:layout_height="42dp"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_marginStart="16dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/nameTextView"
                    android:text="@string/profile_name"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:textStyle="bold|normal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/statusTextView"
                    android:text="@string/online"
                    android:layout_gravity="start"
                    android:textSize="12sp"
                    android:textColor="@color/white"
                    android:textStyle="bold|normal"
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/chatLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/optionsLinearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/chatRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/optionsLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:background="@drawable/bottom_shape"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="2"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="10dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:padding="8dp"
                android:weightSum="10">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="9"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/messageEditText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="4dp"
                        android:autofillHints=""
                        android:background="@android:color/transparent"
                        android:gravity="start|center"
                        android:hint="@string/ask_a_question"
                        android:inputType="textAutoComplete"
                        android:padding="4dp"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:textColorHint="@color/grey"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <ImageView
                    android:id="@+id/attachmentImageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:contentDescription="@string/attachment"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:src="@drawable/ic_clip"
                    app:tint="@color/grey" />

                <ImageView
                    android:id="@+id/cameraImageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:contentDescription="@string/camera"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:src="@drawable/ic_camera"
                    app:tint="@color/grey" />


            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="-16dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp"
            android:backgroundTint="@color/blue"
            app:cardUseCompatPadding="true">

            <ImageView
                android:id="@+id/sendImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/send_message"
                android:elevation="10dp"
                android:padding="10dp"
                android:src="@drawable/ic_send"
                app:tint="@color/white" />

        </androidx.cardview.widget.CardView>




    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>